--- a/testing/TestHarness/TestHarness.Shared/Ext/Navigation/Apps/Chefs/ChefsHomePage.xaml
+++ b/testing/TestHarness/TestHarness.Shared/Ext/Navigation/Apps/Chefs/ChefsHomePage.xaml
@@ -4,6 +4,7 @@
 	  xmlns:local="using:TestHarness.Ext.Navigation.Apps.Chefs"
 	  xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
 	  xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+	  xmlns:uen="using:Uno.Extensions.Navigation.UI"
 	  mc:Ignorable="d"
 	  Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
 
@@ -13,5 +14,11 @@
 				Command="{Binding ShowCurrentProfile}" />
 		<Button Content="Profile (New)"
 				Command="{Binding ShowCurrentProfileNew}" />
+		<Button Content="Recipe Details"
+				uen:Navigation.Request="ChefsRecipeDetails" />
+		<Button Content="Search"
+				uen:Navigation.Request="ChefsSearch" />
+		<Button Content="Notifications"
+				uen:Navigation.Request="ChefsNotifications" />
 	</StackPanel>
 </Page>
