--- a/testing/TestHarness/TestHarness.Shared/Ext/Navigation/Apps/Chefs/ChefsRecipeDetailsPage.xaml
+++ b/testing/TestHarness/TestHarness.Shared/Ext/Navigation/Apps/Chefs/ChefsRecipeDetailsPage.xaml
@@ -1,14 +1,15 @@
 ﻿<Page x:Class="TestHarness.Ext.Navigation.Apps.Chefs.ChefsRecipeDetailsPage"
 	  xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
 	  xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-	  xmlns:local="using:TestHarness.Ext.Navigation.Apps.Chefs"
 	  xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+	  xmlns:local="using:TestHarness.Ext.Navigation.Apps.Chefs"
 	  xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-	  mc:Ignorable="d"
-	  Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
+	  Background="{ThemeResource ApplicationPageBackgroundThemeBrush}"
+	  mc:Ignorable="d">
 
 	<StackPanel>
 		<TextBlock Text="ChefsRecipeDetails" />
 		<TextBlock Text="{Binding Recipe.Name}" />
+		<Button Command="{Binding LiveCooking}" Content="Start Cooking!" />
 	</StackPanel>
 </Page>
