--- a/testing/TestHarness/TestHarness.Shared/Ext/Navigation/Apps/Chefs/ChefsSearchPage.xaml
+++ b/testing/TestHarness/TestHarness.Shared/Ext/Navigation/Apps/Chefs/ChefsSearchPage.xaml
@@ -1,16 +1,15 @@
 ﻿<Page x:Class="TestHarness.Ext.Navigation.Apps.Chefs.ChefsSearchPage"
 	  xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
 	  xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-	  xmlns:local="using:TestHarness.Ext.Navigation.Apps.Chefs"
 	  xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+	  xmlns:local="using:TestHarness.Ext.Navigation.Apps.Chefs"
 	  xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
 	  xmlns:uen="using:Uno.Extensions.Navigation.UI"
-	  mc:Ignorable="d"
-	  Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
+	  Background="{ThemeResource ApplicationPageBackgroundThemeBrush}"
+	  mc:Ignorable="d">
 
 	<Grid>
 		<TextBlock Text="ChefsSearch" />
-		<Button Content="Recipe Details"
-				uen:Navigation.Request="ChefsSearchRecipeDetails" />
+		<Button Command="{Binding NavigateToRecipeDetail}" Content="Recipe Details" />
 	</Grid>
 </Page>
