--- a/testing/TestHarness/TestHarness/Ext/Navigation/RoutesNavigation/HomePage.xaml
+++ b/testing/TestHarness/TestHarness/Ext/Navigation/RoutesNavigation/HomePage.xaml
@@ -1,16 +1,15 @@
-﻿<Page
-    x:Class="TestHarness.Ext.Navigation.RoutesNavigation.HomePage"
-    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:TestHarness.Ext.Navigation.RoutesNavigation"
-    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-	xmlns:uen="using:Uno.Extensions.Navigation.UI"
-    mc:Ignorable="d"
-    d:DesignHeight="300"
-    d:DesignWidth="400">
+﻿<Page x:Class="TestHarness.Ext.Navigation.RoutesNavigation.HomePage"
+	  xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+	  xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+	  xmlns:local="using:TestHarness.Ext.Navigation.RoutesNavigation"
+	  xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+	  xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+	  xmlns:uen="using:Uno.Extensions.Navigation.UI"
+	  mc:Ignorable="d"
+	  d:DesignHeight="300"
+	  d:DesignWidth="400">
 
-    <Grid>
+	<Grid>
 		<StackPanel Grid.Row="1"
 					Orientation="Vertical"
 					HorizontalAlignment="Center">
