--- a/testing/TestHarness/TestHarness/Ext/Navigation/RoutesNavigation/SamplePage.xaml
+++ b/testing/TestHarness/TestHarness/Ext/Navigation/RoutesNavigation/SamplePage.xaml
@@ -1,14 +1,13 @@
-﻿<Page
-    x:Class="TestHarness.Ext.Navigation.RoutesNavigation.SamplePage"
-    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:TestHarness.Ext.Navigation.RoutesNavigation"
-    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-	xmlns:uen="using:Uno.Extensions.Navigation.UI"
-	xmlns:utu="using:Uno.Toolkit.UI"
-    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    mc:Ignorable="d"
-    Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
+﻿<Page x:Class="TestHarness.Ext.Navigation.RoutesNavigation.SamplePage"
+	  xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+	  xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+	  xmlns:local="using:TestHarness.Ext.Navigation.RoutesNavigation"
+	  xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+	  xmlns:uen="using:Uno.Extensions.Navigation.UI"
+	  xmlns:utu="using:Uno.Toolkit.UI"
+	  xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+	  mc:Ignorable="d"
+	  Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
 
 	<Grid>
 		<Grid.RowDefinitions>
