--- a/testing/TestHarness/TestHarness/TestFrameHost.xaml
+++ b/testing/TestHarness/TestHarness/TestFrameHost.xaml
@@ -1,21 +1,24 @@
-﻿<UserControl
-    x:Class="TestHarness.TestFrameHost"
-    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:TestHarness"
-    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    mc:Ignorable="d"
-    d:DesignHeight="300"
-    d:DesignWidth="400"
-			 >
+﻿<UserControl x:Class="TestHarness.TestFrameHost"
+			 xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+			 xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+			 xmlns:local="using:TestHarness"
+			 xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+			 xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+			 mc:Ignorable="d"
+			 d:DesignHeight="300"
+			 d:DesignWidth="400">
 
 	<Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
 		<Grid.RowDefinitions>
 			<RowDefinition />
 			<RowDefinition Height="Auto" />
 		</Grid.RowDefinitions>
-		<Frame x:Name="TestFrame" SourcePageType="local:MainPage"/>
-		<Button Grid.Row="1" HorizontalAlignment="Center"  Content="Exit Test" IsEnabled="{Binding ElementName=TestFrame, Path=CanGoBack}" Click="ExitTestClick" />
+		<Frame x:Name="TestFrame" SourcePageType="local:MainPage" />
+		<Button Grid.Row="1"
+				HorizontalAlignment="Center"
+				Content="Exit Test"
+				AutomationProperties.AutomationId="ExitTestButton"
+				IsEnabled="{Binding ElementName=TestFrame, Path=CanGoBack}"
+				Click="ExitTestClick" />
 	</Grid>
 </UserControl>
