--- a/testing/TestHarness/TestHarness/Ext/Navigation/Apps/Chefs/ChefsWelcomePage.xaml
+++ b/testing/TestHarness/TestHarness/Ext/Navigation/Apps/Chefs/ChefsWelcomePage.xaml
@@ -10,7 +10,8 @@
 
 	<StackPanel>
 		<TextBlock Text="ChefsWelcome" />
-		<Button Content="Next"
+		<Button AutomationProperties.AutomationId="NextButton"
+				Content="Next"
 				uen:Navigation.Request="ChefsLogin" />
 	</StackPanel>
 </Page>
