--- a/testing/TestHarness/TestHarness/Ext/Navigation/Apps/Chefs/ChefsRecipeDetailsPage.xaml
+++ b/testing/TestHarness/TestHarness/Ext/Navigation/Apps/Chefs/ChefsRecipeDetailsPage.xaml
@@ -3,13 +3,18 @@
 	  xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
 	  xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
 	  xmlns:local="using:TestHarness.Ext.Navigation.Apps.Chefs"
+	  xmlns:utu="using:Uno.Toolkit.UI"
 	  xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
 	  Background="{ThemeResource ApplicationPageBackgroundThemeBrush}"
 	  mc:Ignorable="d">
 
-	<StackPanel>
-		<TextBlock Text="ChefsRecipeDetails" />
-		<TextBlock Text="{Binding Recipe.Name}" />
-		<Button Command="{Binding LiveCooking}" Content="Start Cooking!" />
-	</StackPanel>
+	<Grid RowDefinitions="Auto,*">
+		<utu:NavigationBar Content="RecipeDetails" />
+		<StackPanel Grid.Row="1">
+			<TextBlock Text="ChefsRecipeDetails" />
+			<TextBlock Text="{Binding Recipe.Name}" />
+			<Button Command="{Binding LiveCooking}"
+					Content="Start Cooking!" />
+		</StackPanel>
+	</Grid>
 </Page>
