chore: remove binding mode
(cherry picked from commit efc8c7ba933f95257d1689ee1569abec0b4d9244)

--- a/testing/TestHarness/TestHarness/Ext/Navigation/AddressBar/AddressBarHomePage.xaml
+++ b/testing/TestHarness/TestHarness/Ext/Navigation/AddressBar/AddressBarHomePage.xaml
@@ -17,7 +17,7 @@
 			<StackPanel Orientation="Horizontal">
 				<TextBlock Text="This page was created: " />
 				<TextBlock AutomationProperties.AutomationId="TbInstanceCountProperty"
-						   Text="{Binding InstanceCountProperty, Mode=TwoWay}" />
+						   Text="{Binding InstanceCountProperty}" />
 				<TextBlock Text=" times" />
 			</StackPanel>
 
