chore: Reset vm when navigating to Search

--- a/testing/TestHarness/TestHarness/Ext/Navigation/Apps/Chefs/ChefsRootPage.xaml
+++ b/testing/TestHarness/TestHarness/Ext/Navigation/Apps/Chefs/ChefsRootPage.xaml
@@ -29,7 +29,7 @@
 								Content="Home" >
 				</utu:TabBarItem>
 
-				<utu:TabBarItem uen:Region.Name="ChefsSearch"
+				<utu:TabBarItem uen:Region.Name="-/ChefsSearch"
 								IsSelectable="True"
 								Content="Search">
 				</utu:TabBarItem>
