test: Add UI test for NavView and TabBar sending Data

--- a/testing/TestHarness/TestHarness/Ext/Navigation/Apps/Regions/RegionsFirstTbiDataPage.xaml
+++ b/testing/TestHarness/TestHarness/Ext/Navigation/Apps/Regions/RegionsFirstTbiDataPage.xaml
@@ -34,6 +34,7 @@
 					 VerticalAlignment="Center"
 					 FontSize="24"
 					 Header="First Tab"
+					 AutomationProperties.AutomationId="RegionsFirstTbiDataPageTextBox"
 					 Style="{StaticResource FilledTextBoxStyle}"
 					 Text="{Binding Entity.Name, Mode=TwoWay}" />
 		</StackPanel>
