--- a/testing/TestHarness/TestHarness/Ext/Navigation/Apps/Regions/RegionsSecondTbiDataPage.xaml
+++ b/testing/TestHarness/TestHarness/Ext/Navigation/Apps/Regions/RegionsSecondTbiDataPage.xaml
@@ -34,6 +34,7 @@
 					 VerticalAlignment="Center"
 					 FontSize="24"
 					 Header="Second Tab"
+					 AutomationProperties.AutomationId="RegionsSecondTbiDataPageTextBox"
 					 Text="{Binding Entity.Name, Mode=TwoWay}" />
 		</StackPanel>
 	</Grid>
