--- a/testing/TestHarness/TestHarness/Ext/Navigation/Apps/Regions/RegionsThirdPage.xaml
+++ b/testing/TestHarness/TestHarness/Ext/Navigation/Apps/Regions/RegionsThirdPage.xaml
@@ -27,6 +27,7 @@
 					HorizontalAlignment="Center"
 					VerticalAlignment="Center">
 			<TextBlock Text="{Binding MyText}"
+					   AutomationProperties.AutomationId="RegionsThirdPageTextBock"
 					   HorizontalAlignment="Center"
 					   FontSize="30" />
 			<Button uen:Navigation.Request="RegionsFourth"
